directors type spacing and contact content and styling with one remaining issue at the meet us heading

--- a/assets/sass/_accordion-section.scss
+++ b/assets/sass/_accordion-section.scss
@@ -1,94 +1,103 @@
 .st-accordion{
-        width:100%;
-        clear:left;
-
-
-        a {
-          letter-spacing: 4px;
-        }
-
-.st-content {
   width:100%;
   clear:left;
-float:left;
-}
-ul > li {
-    text-align: center;
-      padding-bottom: 24px;
-      padding-top: 24px;
-      font-size: 24px;
-      line-height: 30px;
-      @include gs-media (t, min-max) {
-      font-size: 42px;
-      line-height: 50px;
-    }
-    @include gs-media (d) {
-      font-size: 54px;
-      line-height: 60px;
-    }
-    border-bottom:1px solid #404040;
 
-}
+  a {
+    letter-spacing: 4px;
+  }
+
+  .st-content {
+    width:100%;
+    clear:left;
+    float:left;
+  }
+
+  ul > li {
+    text-align: center;
+    padding-bottom: 24px;
+    padding-top: 24px;
+
+    font-size: 36px;
+    line-height: 42px;
+    
+    @include gs-media (t, min-max) {
+      font-size: 36px;
+      line-height: 42px;
+    }
+      
+    @include gs-media (d) {
+      font-size: 36px;
+      line-height: 42px;
+    }
+    
+    border-bottom:1px solid #404040;
+  }
 
 	p {
+    font-size:18px;
+    line-height:30px;
+    padding-top: 36px;
+    padding-bottom: 36px;
 
-	@include gs-media (m) {
-        @include gs-span(m,all);
-        }
-      @include gs-media (t, min-max) {
-        @include gs-span(t,2, 7);
+    @include gs-media (m) {
+      @include gs-span(m,all);
+    }
+    
+    @include gs-media (t, min-max) {
+      @include gs-span(t,2, 7);
+    }
+
+    @include gs-media (d) {
+      @include gs-span(d, 4, 9, (3, 10));
+    }
+  }
+
+  ul li ul {
+		
+    @include gs-media (m) {
+      @include gs-span(m,all);
+    }
+    
+    @include gs-media (t, min-max) {
+      @include gs-span(t,2, 7);
+    }
+
+    @include gs-media (d) {
+      @include gs-span(d,all);
+      //@include padding-trailer(8);
+    }
+
+  li {
+    @include gs-media (m) {
+      width: 100%;
+      float: left;
+      margin-left: 0;
+      margin-right: 0;
+      display:inline;
+      border-bottom:none;
+      &:nth-of-type(3) {
+        margin-bottom: 24px;
       }
 
+      img {
+        border-radius: 190px;
+      }
+    }
+  
       @include gs-media (d) {
-         @include gs-span(d, 4, 9, (3, 10));
-          font-size:18px;
-          line-height:30px;
-
-        }
-
-	}
-
- 	 ul li ul {
-
- 			@include gs-media (m) {
-         @include gs-span(m,all);
-         }
-       @include gs-media (t, min-max) {
-         @include gs-span(t,2, 7);
-       }
-
-       @include gs-media (d) {
-        @include gs-span(d,all);
-         //@include padding-trailer(8);
-         }
-  li {
-           @include gs-media (m) {
-       width: 100%;
-       float: left;
-       margin-left: 0;
-       margin-right: 0;
-       display:inline;
-       border-bottom:none;
-       &:nth-of-type(3) {
-         margin-bottom: 24px;
-       }
-       img {
-               border-radius: 190px;
-       }
- }
-         @include gs-media (d) {
         width: 25.3%;
         float: left;
         margin-left: 0;
         margin-right: 12%;
-         border-bottom:none;
-     			&:nth-of-type(3) {
-     				margin-right: 0;
-     			}
-       img {
-               border-radius: 190px;
-       }
- }
- 		}
+        border-bottom:none;
+        &:nth-of-type(3) {
+          margin-right: 0;
+        }
+        
+        img {
+          border-radius: 190px;
+        }
+      }
+    }
  	}
 }
