--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -44,31 +44,31 @@ img {
 }
 
 .addresses {
-    @include gs-media(m) {
+  padding-top: 36px;
+  padding-bottom: 24px;
+
+  @include gs-media(m) {
     @include gs-span(m, all);
   }
 
-    @include gs-media(t, min-max) {
+  @include gs-media(t, min-max) {
     @include gs-span(d, 2, 7);
   }
 
   @include gs-media(d) {
     @include gs-span(d, 3, 10);
   }
-    padding-top: 56px;
-    padding-bottom: 24px;
 
-    span {
-      line-height: 1em;
-      padding-bottom:  1em;
-      display: block;
-    }
+  span {
+    font-size: 24px;
+    line-height: 36px;
+    display: block;
+  }
 
-    .vcard {
-      text-transform:uppercase;
-      text-align:center;
-    }
-
+  .vcard {
+    text-transform:uppercase;
+    text-align:center;
+  }
 }
 
 .three-up {
