--- a/assets/sass/_people.scss
+++ b/assets/sass/_people.scss
@@ -3,10 +3,9 @@
   h2 {
     font-size: 42px;
     line-height:56px;
-    font-weight:600;
     text-align: center;
-    padding-top: $base-line-height * 6;
-    padding-bottom: $base-line-height * 6;
+    padding-top: $base-line-height * 12;
+    padding-bottom: $base-line-height * 10;
     letter-spacing:4px;
   }
 
@@ -25,30 +24,27 @@
   h3 {
     @include gs-media (m) {
       @include gs-span(m,all);
-      font-size: 32px;
+      font-size: 36px;
       line-height:42px;
       text-align: center;
-      font-weight: 300;
       padding-top: $base-line-height * 3;
       padding-bottom: $base-line-height * 3;
     }
 
     @include gs-media (t, min-max) {
       @include gs-span(t,2, 7);
-      font-size: 32px;
+      font-size: 36px;
       line-height:42px;
       text-align: center;
-      font-weight: 300;
       padding-top: $base-line-height * 3;
       padding-bottom: $base-line-height * 3;
     }
 
     @include gs-media (d) {
       @include gs-span(d, all);
-      font-size: 32px;
+      font-size: 36px;
       line-height:42px;
       text-align: center;
-      font-weight: 300;
       padding-top: $base-line-height * 3;
       padding-bottom: $base-line-height * 3;
     }
